--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "inversify-express-utils": "^6.4.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
