--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
+    "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/pg": "^8.10.2",
     "nodemon": "^3.0.1"
   }
 }
