feat: set up manual database migration

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "concurrently \"yarn tsc --watch\" \"nodemon -q dist/main.js\"",
+    "db:migrate": "ts-node src/migrations/migrate.ts",
     "test": "jest"
   },
   "repository": {
