--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
   },
   "homepage": "https://github.com/97Afolabi/showwcase-backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
+    "jsonwebtoken": "^9.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.1",
+    "prettyjson": "^1.2.5",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -36,6 +42,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/pg": "^8.10.2",
     "nodemon": "^3.0.1"
   }
