--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
   "homepage": "https://github.com/97Afolabi/showwcase-backend#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
