--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "joi": "^17.9.2",
